8148023: File.createTempFile is not adhering to the contract regarding file name lengths

Truncate the prefix, suffix, random characters per the specification

Reviewed-by: rriggs